Fixed displaying on mobile buttons posision

--- a/QuizApp/src/css/endScreen.css
+++ b/QuizApp/src/css/endScreen.css
@@ -42,7 +42,7 @@ main {
 }
 
 #main {
-    height: 75vh;
+    height: 75dvh;
 }
 
 #checkmark {
